syntax = "proto3";
option java_package = "com.example.grpc.kotlingrpcexample.proto";
option java_outer_classname = "MessageProtobuf";
option java_multiple_files = true;

message CreateMessageRequest {
    string name = 1;
}

message CreateMessageResponse {
    Message message = 1;
    MessageType type = 2;
}

message Message {
    string text = 1;
    int32 length = 2;
}

enum MessageType {
    NONE = 0;
    NORMAL = 1;
    SPECIAL = 2;
}

